--- a/index.html
+++ b/index.html
@@ -35,18 +35,20 @@
     }
 
     button {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px 40px;
-      font-size: 20px;
-      border: none;
-      background: #333;
-      color: #fff;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: 0.2s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1em 2em;       /* proporcional ao texto */
+    font-size: clamp(16px, 2vw, 22px); 
+    border: none;
+    background: #333;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.2s;
     }
+
+
 
     button:hover {
       background: #555;
