--- a/index.html
+++ b/index.html
@@ -84,28 +84,28 @@
       "./imagens/vaso02.jpg",
       "./imagens/vaso03.jpg",
       "./imagens/vaso04.jpg",
-      "./imagens/vaso05.jpg",
-      "./imagens/vaso06.jpg",
-      "./imagens/vaso07.jpg",
-      "./imagens/vaso08.jpg",
-      "./imagens/vaso09.jpg",
-      "./imagens/vaso10.jpg",
-      "./imagens/vaso11.jpg",
-      "./imagens/vaso12.jpg",
-      "./imagens/vaso13.jpg",
-      "./imagens/vaso14.jpg",
-      "./imagens/vaso15.jpg",
-      "./imagens/vaso16.jpg",
-      "./imagens/vaso17.jpg",
-      "./imagens/vaso18.jpg",
-      "./imagens/vaso19.jpg",
-      "./imagens/vaso20.jpg",
-      "./imagens/vaso21.jpg",
-      "./imagens/vaso22.jpg",
-      "./imagens/vaso23.jpg",
-      "./imagens/vaso24.jpg",
-      "./imagens/vaso25.jpg",
-      "./imagens/vaso26.jpg",
+  //    "./imagens/vaso05.jpg",
+  //    "./imagens/vaso06.jpg",
+  //    "./imagens/vaso07.jpg",
+  //    "./imagens/vaso08.jpg",
+  //    "./imagens/vaso09.jpg",
+  //    "./imagens/vaso10.jpg",
+  //    "./imagens/vaso11.jpg",
+  //    "./imagens/vaso12.jpg",
+  //    "./imagens/vaso13.jpg",
+  //    "./imagens/vaso14.jpg",
+  //    "./imagens/vaso15.jpg",
+  //    "./imagens/vaso16.jpg",
+  //    "./imagens/vaso17.jpg",
+  //    "./imagens/vaso18.jpg",
+  //    "./imagens/vaso19.jpg",
+  //    "./imagens/vaso20.jpg",
+  //    "./imagens/vaso21.jpg",
+  //    "./imagens/vaso22.jpg",
+  //    "./imagens/vaso23.jpg",
+  //    "./imagens/vaso24.jpg",
+  //    "./imagens/vaso25.jpg",
+  //    "./imagens/vaso26.jpg",
       "./imagens/fim.jpg"
     ];
 
@@ -180,3 +180,4 @@
   </script>
 </body>
 </html>
+
