--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Catálogo Flipbook com StPageFlip</title>
-  <link rel="stylesheet" href="src/css/style.css">
+  <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
   <div id="viewer">
@@ -23,3 +23,4 @@
   <script src="src/js/script.js"></script>
 </body>
 </html>
+
