--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
   <!-- Biblioteca StPageFlip -->
   <script src="https://cdn.jsdelivr.net/npm/page-flip/dist/js/page-flip.browser.min.js"></script>
-  <script src="src/js/script.js"></script>
+  <script src="./src/js/script.js"></script>
 </body>
 </html>
+
 
